--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -556,16 +556,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x19bb1ee4640>]"
+              "[<matplotlib.lines.Line2D at 0x20f805edb80>]"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -602,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -614,7 +614,7 @@
               "126518.695923546/t + 4163723156.25/t**3"
             ]
           },
-          "execution_count": 58,
+          "execution_count": 24,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -625,16 +625,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "8.776787421580208"
+              "(526.6072452948125, 8.776787421580208)"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -649,12 +649,12 @@
         "    return Pleggs1_scipy(t) - spline(t)\n",
         "\n",
         "punto_de_corte1 = scipy.optimize.brentq(diff_function1, 1, 2000)\n",
-        "punto_de_corte1/60 "
+        "punto_de_corte1, punto_de_corte1/60 "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -666,7 +666,7 @@
               "363197.440538543/t + 45155484281.25/t**3"
             ]
           },
-          "execution_count": 63,
+          "execution_count": 26,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -677,16 +677,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "25.586582841422775"
+              "(1535.1949704853664, 25.586582841422775)"
             ]
           },
-          "execution_count": 65,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -701,12 +701,12 @@
         "    return Pleggs2_scipy(t) - spline(t)\n",
         "\n",
         "punto_de_corte2 = scipy.optimize.brentq(diff_function2, 1500, 2500)\n",
-        "punto_de_corte2/60"
+        "punto_de_corte2, punto_de_corte2/60"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
