--- a/T3_GuzmanMejia_MontealegrePeralta/T3_GuzmanMejia_Montealegre.ipynb
+++ b/T3_GuzmanMejia_MontealegrePeralta/T3_GuzmanMejia_Montealegre.ipynb
@@ -124,6 +124,10 @@
       },
       "outputs": [],
       "source": [
+        "# Se creó una función que describe a\n",
+        "# las ecuaciones diferenciales para poder\n",
+        "# usar scipy correctamente\n",
+        "\n",
         "def ode(variables, t):\n",
         "    # Variables\n",
         "    x = variables[0]\n",
@@ -160,7 +164,7 @@
         }
       ],
       "source": [
-        "condiciones_iniciales = [0, 1] # [x0, y0]\n",
+        "condiciones_iniciales = [0, 1] # Condiciones iniciales de la ecuación diferencial\n",
         "condiciones_iniciales"
       ]
     },
@@ -175,7 +179,9 @@
       "source": [
         "start = 0\n",
         "stop = 10\n",
-        "num = 50"
+        "num = 50\n",
+        "# Esto hace referencia a desde qué tiempo a qué tiempo y\n",
+        "# a cuantos pasos quiero la solucion numerica de la ecuacion diferencial"
       ]
     },
     {
@@ -272,7 +278,7 @@
         "    V = alpha*Y - alpha*(X**2 + Y**2)*Y + X\n",
         "\n",
         "    fig, ax = plt.subplots(figsize=(5,5))\n",
-        "    ax.plot(sol[:,0],sol[:,1])\n",
+        "    ax.plot(sol[:,0],sol[:,1]) #se usa la solucion dada por scipy para el eje x y eje y\n",
         "    ax.streamplot(X,Y,U,V)\n",
         "\n",
         "    formato_grafica(titulo='Comportamiento ODE',\n",
@@ -293,69 +299,19 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: ipywidgets in c:\\users\\acer\\anaconda3\\lib\\site-packages (7.6.5)\n",
-            "Requirement already satisfied: nbformat>=4.2.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (5.5.0)\n",
-            "Requirement already satisfied: ipykernel>=4.5.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (6.15.2)\n",
-            "Requirement already satisfied: traitlets>=4.3.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (5.1.1)\n",
-            "Requirement already satisfied: jupyterlab-widgets>=1.0.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (1.0.0)\n",
-            "Requirement already satisfied: ipython>=4.0.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (7.31.1)\n",
-            "Requirement already satisfied: widgetsnbextension~=3.5.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (3.5.2)\n",
-            "Requirement already satisfied: ipython-genutils~=0.2.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipywidgets) (0.2.0)\n",
-            "Requirement already satisfied: nest-asyncio in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (1.5.5)\n",
-            "Requirement already satisfied: pyzmq>=17 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (23.2.0)\n",
-            "Requirement already satisfied: jupyter-client>=6.1.12 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (7.3.4)\n",
-            "Requirement already satisfied: packaging in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (21.3)\n",
-            "Requirement already satisfied: psutil in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (5.9.0)\n",
-            "Requirement already satisfied: matplotlib-inline>=0.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (0.1.6)\n",
-            "Requirement already satisfied: debugpy>=1.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (1.5.1)\n",
-            "Requirement already satisfied: tornado>=6.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipykernel>=4.5.1->ipywidgets) (6.1)\n",
-            "Requirement already satisfied: setuptools>=18.5 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (63.4.1)\n",
-            "Requirement already satisfied: decorator in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (5.1.1)\n",
-            "Requirement already satisfied: jedi>=0.16 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.18.1)\n",
-            "Requirement already satisfied: pickleshare in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.7.5)\n",
-            "Requirement already satisfied: backcall in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.2.0)\n",
-            "Requirement already satisfied: pygments in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (2.11.2)\n",
-            "Requirement already satisfied: colorama in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (0.4.5)\n",
-            "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from ipython>=4.0.0->ipywidgets) (3.0.20)\n",
-            "Requirement already satisfied: jupyter_core in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets) (4.11.1)\n",
-            "Requirement already satisfied: fastjsonschema in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets) (2.16.2)\n",
-            "Requirement already satisfied: jsonschema>=2.6 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbformat>=4.2.0->ipywidgets) (4.16.0)\n",
-            "Requirement already satisfied: notebook>=4.4.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from widgetsnbextension~=3.5.0->ipywidgets) (6.4.12)\n",
-            "Requirement already satisfied: parso<0.9.0,>=0.8.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jedi>=0.16->ipython>=4.0.0->ipywidgets) (0.8.3)\n",
-            "Requirement already satisfied: attrs>=17.4.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jsonschema>=2.6->nbformat>=4.2.0->ipywidgets) (21.4.0)\n",
-            "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jsonschema>=2.6->nbformat>=4.2.0->ipywidgets) (0.18.0)\n",
-            "Requirement already satisfied: entrypoints in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (0.4)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (2.8.2)\n",
-            "Requirement already satisfied: pywin32>=1.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jupyter_core->nbformat>=4.2.0->ipywidgets) (302)\n",
-            "Requirement already satisfied: argon2-cffi in c:\\users\\acer\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (21.3.0)\n",
-            "Requirement already satisfied: nbconvert>=5 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (6.4.4)\n",
-            "Requirement already satisfied: prometheus-client in c:\\users\\acer\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.14.1)\n",
-            "Requirement already satisfied: terminado>=0.8.3 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.13.1)\n",
-            "Requirement already satisfied: jinja2 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.11.3)\n",
-            "Requirement already satisfied: Send2Trash>=1.8.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.8.0)\n",
-            "Requirement already satisfied: wcwidth in c:\\users\\acer\\anaconda3\\lib\\site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=4.0.0->ipywidgets) (0.2.5)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from packaging->ipykernel>=4.5.1->ipywidgets) (3.0.9)\n",
-            "Requirement already satisfied: mistune<2,>=0.8.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.8.4)\n",
-            "Requirement already satisfied: bleach in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (4.1.0)\n",
-            "Requirement already satisfied: pandocfilters>=1.4.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.5.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (4.11.1)\n",
-            "Requirement already satisfied: testpath in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.6.0)\n",
-            "Requirement already satisfied: nbclient<0.6.0,>=0.5.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.13)\n",
-            "Requirement already satisfied: defusedxml in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.7.1)\n",
-            "Requirement already satisfied: jupyterlab-pygments in c:\\users\\acer\\anaconda3\\lib\\site-packages (from nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.1.2)\n",
-            "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.0.1)\n",
-            "Requirement already satisfied: six>=1.5 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from python-dateutil>=2.8.2->jupyter-client>=6.1.12->ipykernel>=4.5.1->ipywidgets) (1.16.0)\n",
-            "Requirement already satisfied: pywinpty>=1.1.0 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from terminado>=0.8.3->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.0.2)\n",
-            "Requirement already satisfied: argon2-cffi-bindings in c:\\users\\acer\\anaconda3\\lib\\site-packages (from argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (21.2.0)\n",
-            "Requirement already satisfied: cffi>=1.0.1 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from argon2-cffi-bindings->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (1.15.1)\n",
-            "Requirement already satisfied: soupsieve>1.2 in c:\\users\\acer\\anaconda3\\lib\\site-packages (from beautifulsoup4->nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.3.1)\n",
-            "Requirement already satisfied: webencodings in c:\\users\\acer\\anaconda3\\lib\\site-packages (from bleach->nbconvert>=5->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (0.5.1)\n",
-            "Requirement already satisfied: pycparser in c:\\users\\acer\\anaconda3\\lib\\site-packages (from cffi>=1.0.1->argon2-cffi-bindings->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets) (2.21)\n"
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "ERROR: Invalid requirement: '#Se'\n"
           ]
         }
       ],
       "source": [
-        "%pip install ipywidgets"
+        "%pip install ipywidgets #Se importó y descargó la libreria correspondiente para usar la gráfica interactiva"
       ]
     },
     {
@@ -398,7 +354,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "ec4753b7ac6e469db5e8a52f9aaa78e9",
+              "model_id": "c5da6d39b6084c4ea22c63baf2d65ca2",
               "version_major": 2,
               "version_minor": 0
             },
@@ -433,6 +389,14 @@
       "source": [
         "1. Varie $\\alpha$ tres veces y comente los resultados.\n",
         "2. Varie el tiempo y comente lo que observa."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "45894094",
+      "metadata": {},
+      "source": [
+        "1. A medida que se aumenta el alpha, se incrementa la convergencia de las flechas del campo vectorial de la ecuación diferencial. En otras palabras, estas flechas se acercan más a la solución de esa ecuación diferencial con las condiciones iniciales dadas."
       ]
     }
   ],
