--- a/T3_GuzmanMejia_MontealegrePeralta/T3_GuzmanMejia_Montealegre.ipynb
+++ b/T3_GuzmanMejia_MontealegrePeralta/T3_GuzmanMejia_Montealegre.ipynb
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 22,
       "id": "VKVRV8IxoY-i",
       "metadata": {
         "id": "VKVRV8IxoY-i"
@@ -289,34 +289,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "BZJHpsPdepfO",
       "metadata": {
         "id": "BZJHpsPdepfO"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "ERROR: Invalid requirement: '#Se'\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "%pip install ipywidgets #Se importó y descargó la libreria correspondiente para usar la gráfica interactiva"
+        "%pip install ipywidgets \n",
+        "#Se importó y descargó la libreria correspondiente para usar la gráfica interactiva"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "id": "FQUlD230erUc",
       "metadata": {
         "id": "FQUlD230erUc"
@@ -328,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 23,
       "id": "somZlm-codOa",
       "metadata": {
         "colab": {
@@ -354,7 +340,7 @@
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c5da6d39b6084c4ea22c63baf2d65ca2",
+              "model_id": "46d335087ecb4de09a0ada30f19bb800",
               "version_major": 2,
               "version_minor": 0
             },
@@ -371,7 +357,7 @@
               "<function __main__.f(alpha, t)>"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 23,
           "metadata": {},
           "output_type": "execute_result"
         }
