--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 67,
       "metadata": {
         "id": "ZsCIIPWUkcY9"
       },
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 69,
       "metadata": {
         "id": "BJaM7fa3kyVv"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 70,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -93,7 +93,7 @@
               "V_gs*(0.5*AC_d*rho*(V_gs + V_hw)**2 + C_rr*W*g/sqrt(G**2/10000 + 1) + G*W*g/(100*sqrt(G**2/10000 + 1)))/(1 - Loss_dt/100)"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 70,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -124,7 +124,7 @@
               "0.5*AC_d*V_gs**3*rho/(1 - Loss_dt/100) + 1.0*AC_d*V_gs**2*V_hw*rho/(1 - Loss_dt/100) + 0.5*AC_d*V_gs*V_hw**2*rho/(1 - Loss_dt/100) + C_rr*V_gs*W*g/(-Loss_dt*sqrt(G**2/10000 + 1)/100 + sqrt(G**2/10000 + 1)) + G*V_gs*W*g/(-Loss_dt*sqrt(G**2/10000 + 1) + 100*sqrt(G**2/10000 + 1))"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -155,7 +155,7 @@
               "0.5*AC_d*V_gs**3*rho/(1 - Loss_dt/100) + AC_d*V_gs**2*V_hw*rho/(1 - Loss_dt/100) + V_gs*(0.5*AC_d*V_hw**2*rho/(1 - Loss_dt/100) + C_rr*W*g/(-Loss_dt*sqrt(G**2/10000 + 1)/100 + sqrt(G**2/10000 + 1)) + G*W*g/(-Loss_dt*sqrt(G**2/10000 + 1) + 100*sqrt(G**2/10000 + 1)))"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 45,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -176,7 +176,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 46,
       "metadata": {
         "id": "B_evvN8QuA3K"
       },
@@ -190,7 +190,7 @@
               "0.21875*V_gs**3 + V_gs*(8.3244387755102*G/sqrt(G**2/10000 + 1) + 4.1622193877551/sqrt(G**2/10000 + 1))"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 47,
       "metadata": {
         "id": "42tX39ja5L7d"
       },
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -275,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
@@ -294,13 +294,13 @@
               "(585.144736507678, 1606.31975226055)"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 51,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "tiempo_237W_primera_grafica, tiempo_237W_segunda_grafica"
+        "tiempo_237W_primera_grafica, tiempo_237W_segunda_grafica # Para el caso de Guasquita y Alto de Patios"
       ]
     },
     {
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
@@ -337,7 +337,7 @@
               "(5.42788426299228, 26.9016607567862)"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 53,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -349,12 +349,12 @@
         "tiempo_ganado1_primera_grafica = tiempo_237W_primera_grafica - tiempo1_237W_primera_grafica\n",
         "tiempo_ganado2_primera_grafica = tiempo_237W_primera_grafica - tiempo2_237W_primera_grafica\n",
         "\n",
-        "tiempo_ganado1_primera_grafica, tiempo_ganado2_primera_grafica"
+        "tiempo_ganado1_primera_grafica, tiempo_ganado2_primera_grafica # Para el caso de Guasquita, con 1 kg y 5 kg menos"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [
         {
@@ -379,7 +379,7 @@
               "(16.7852969719399, 83.4507131552232)"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -391,7 +391,7 @@
         "tiempo_ganado1_segunda_grafica = tiempo_237W_segunda_grafica - tiempo1_237W_segunda_grafica\n",
         "tiempo_ganado2_segunda_grafica = tiempo_237W_segunda_grafica - tiempo2_237W_segunda_grafica\n",
         "\n",
-        "tiempo_ganado1_segunda_grafica, tiempo_ganado2_segunda_grafica"
+        "tiempo_ganado1_segunda_grafica, tiempo_ganado2_segunda_grafica # Para el caso de Alto de Patios, 1 kg y 5 kg menos"
       ]
     },
     {
@@ -403,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -455,7 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -480,7 +480,7 @@
               "177.59649122807016"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 58,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -499,8 +499,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Para esto, se usaron intervalos semiabiertos con el fin de que la distribución de porcentajes dieran un total del 100%"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -528,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -560,8 +567,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#ÍTEM 3"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Punto 1 y Punto 2"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -570,16 +591,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x20f805edb80>]"
+              "[<matplotlib.lines.Line2D at 0x20f811bdf10>]"
             ]
           },
-          "execution_count": 23,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -615,112 +636,15 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 24,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/latex": [
-              "$\\displaystyle \\frac{126518.695923546}{t} + \\frac{4163723156.25}{t^{3}}$"
-            ],
-            "text/plain": [
-              "126518.695923546/t + 4163723156.25/t**3"
-            ]
-          },
-          "execution_count": 24,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "Pleggs1"
+        "Gráfica bonita "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(526.6072452948125, 8.776787421580208)"
-            ]
-          },
-          "execution_count": 30,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def Pleggs1_scipy(t):\n",
-        "    return 126518.695923546/t + 4163723156.25/t**3\n",
-        "\n",
-        "spline = scipy.interpolate.CubicSpline(time, p_media)\n",
-        "\n",
-        "def diff_function1(t):\n",
-        "    return Pleggs1_scipy(t) - spline(t)\n",
-        "\n",
-        "punto_de_corte1 = scipy.optimize.brentq(diff_function1, 1, 2000)\n",
-        "punto_de_corte1, punto_de_corte1/60 "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/latex": [
-              "$\\displaystyle \\frac{363197.440538543}{t} + \\frac{45155484281.25}{t^{3}}$"
-            ],
-            "text/plain": [
-              "363197.440538543/t + 45155484281.25/t**3"
-            ]
-          },
-          "execution_count": 26,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "Pleggs2"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 29,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "(1535.1949704853664, 25.586582841422775)"
-            ]
-          },
-          "execution_count": 29,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def Pleggs2_scipy(t):\n",
-        "    return 363197.440538543/t + 45155484281.25/t**3\n",
-        "\n",
-        "spline = scipy.interpolate.CubicSpline(time, p_media)\n",
-        "\n",
-        "def diff_function2(t):\n",
-        "    return Pleggs2_scipy(t) - spline(t)\n",
-        "\n",
-        "punto_de_corte2 = scipy.optimize.brentq(diff_function2, 1500, 2500)\n",
-        "punto_de_corte2, punto_de_corte2/60"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -754,15 +678,112 @@
         "formato_grafica(\"Potencia media vs Tiempo\",\"Tiempo [s]\",\"Potencia media [W]\")\n",
         "\n",
         "\n",
-        "plt.show()\n"
+        "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\frac{126518.695923546}{t} + \\frac{4163723156.25}{t^{3}}$"
+            ],
+            "text/plain": [
+              "126518.695923546/t + 4163723156.25/t**3"
+            ]
+          },
+          "execution_count": 63,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Pleggs1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(526.6072452948125, 8.776787421580208)"
+            ]
+          },
+          "execution_count": 64,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def Pleggs1_scipy(t):\n",
+        "    return 126518.695923546/t + 4163723156.25/t**3\n",
+        "\n",
+        "spline = scipy.interpolate.CubicSpline(time, p_media)\n",
+        "\n",
+        "def diff_function1(t):\n",
+        "    return Pleggs1_scipy(t) - spline(t)\n",
+        "\n",
+        "punto_de_corte1 = scipy.optimize.brentq(diff_function1, 1, 2000)\n",
+        "punto_de_corte1, punto_de_corte1/60 # El primero en segundos, y luego en minutos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\frac{363197.440538543}{t} + \\frac{45155484281.25}{t^{3}}$"
+            ],
+            "text/plain": [
+              "363197.440538543/t + 45155484281.25/t**3"
+            ]
+          },
+          "execution_count": 65,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Pleggs2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(1535.1949704853664, 25.586582841422775)"
+            ]
+          },
+          "execution_count": 66,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def Pleggs2_scipy(t):\n",
+        "    return 363197.440538543/t + 45155484281.25/t**3\n",
+        "\n",
+        "spline = scipy.interpolate.CubicSpline(time, p_media)\n",
+        "\n",
+        "def diff_function2(t):\n",
+        "    return Pleggs2_scipy(t) - spline(t)\n",
+        "\n",
+        "punto_de_corte2 = scipy.optimize.brentq(diff_function2, 1500, 2500)\n",
+        "punto_de_corte2, punto_de_corte2/60 #El primero en segundos, y luego en minutos"
+      ]
     }
   ],
   "metadata": {
