--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -706,16 +706,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "(526.6072452948125, 8.776787421580208)"
+              "(526.607245294814, 8.776787421580233)"
             ]
           },
-          "execution_count": 64,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -729,8 +729,8 @@
         "def diff_function1(t):\n",
         "    return Pleggs1_scipy(t) - spline(t)\n",
         "\n",
-        "punto_de_corte1 = scipy.optimize.brentq(diff_function1, 1, 2000)\n",
-        "punto_de_corte1, punto_de_corte1/60 # El primero en segundos, y luego en minutos"
+        "punto_de_corte1 = scipy.optimize.root_scalar(diff_function1, bracket=[100,2000],method=\"bisect\")\n",
+        "punto_de_corte1.root, punto_de_corte1.root/60  # El primero en segundos, y luego en minutos"
       ]
     },
     {
@@ -758,16 +758,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "(1535.1949704853664, 25.586582841422775)"
+              "(1535.1949704853682, 25.586582841422803)"
             ]
           },
-          "execution_count": 66,
+          "execution_count": 85,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -781,8 +781,9 @@
         "def diff_function2(t):\n",
         "    return Pleggs2_scipy(t) - spline(t)\n",
         "\n",
-        "punto_de_corte2 = scipy.optimize.brentq(diff_function2, 1500, 2500)\n",
-        "punto_de_corte2, punto_de_corte2/60 #El primero en segundos, y luego en minutos"
+        "punto_de_corte2 = scipy.optimize.root_scalar(diff_function2, bracket=[1000,2500], method=\"bisect\")\n",
+        "punto_de_corte2.root, punto_de_corte2.root/60 \n",
+        "#El primero en segundos, y luego en minutos"
       ]
     }
   ],
