--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -45,11 +45,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Parte 1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "bNd54DpflBbM"
       },
       "source": [
-        "#ÍTEM 1"
+        "# ÍTEM 1"
       ]
     },
     {
@@ -450,7 +457,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#ÍTEM 2"
+        "# ÍTEM 2"
       ]
     },
     {
@@ -570,7 +577,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#ÍTEM 3"
+        "# ÍTEM 3"
       ]
     },
     {
@@ -785,6 +792,51 @@
         "punto_de_corte2.root, punto_de_corte2.root/60 \n",
         "#El primero en segundos, y luego en minutos"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Parte 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# ÍTEM 1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Punto 3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 87,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def ode(variables,V,L,C,Q,R,t):\n",
+        "    # Variables\n",
+        "    Q = variables[0]\n",
+        "    dQ_dt = variables[1]\n",
+        "    \n",
+        "    # Ecuaciones\n",
+        "    d2Q_dt2 = V/L - (1/(C*L))*Q - (R/L)*dQ_dt\n",
+        "    \n",
+        "    return [dQ_dt, d2x_dt2]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
