--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -811,6 +811,38 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Punto 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 88,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        " # L*d2Q/dt2 + R*dQ/dt + (1/C)*Q = V(t)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Punto 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 89,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        " # d2Q/dt2= V(t)/L -(1/C*L)*Q - (R/L)*dQ/dt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Punto 3"
       ]
     },
