--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -942,6 +942,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# ÍTEM 3"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 99,
       "metadata": {},
