--- a/T3_GuzmanMejia_MontealegrePeralta/T3_GuzmanMejia_Montealegre.ipynb
+++ b/T3_GuzmanMejia_MontealegrePeralta/T3_GuzmanMejia_Montealegre.ipynb
@@ -384,6 +384,14 @@
       "source": [
         "1. A medida que se aumenta el alpha, se incrementa la convergencia de las flechas del campo vectorial de la ecuación diferencial. En otras palabras, estas flechas se acercan más a la solución de esa ecuación diferencial con las condiciones iniciales dadas."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "620a2885",
+      "metadata": {},
+      "source": [
+        "2. Al variar el tiempo, lastimosamente no se nota qué es lo pasa porque en la función dada no se utiliza, ni tampoco se explica cómo se debe utilizar. Por lo tanto, al variar el tiempo, el campo vectorial de la ecuación diferencial sigue teniedo la misma forma."
+      ]
     }
   ],
   "metadata": {
