--- a/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
+++ b/Proyecto/Proyecto_JuanGuzman_JhonMontealegre.ipynb
@@ -909,11 +909,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 335,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def ode(variables,t,V,L,C,Q,R):\n",
+        "def ode(variables,t,R,L,C,V):\n",
         "    # Variables\n",
         "    Q = variables[0]\n",
         "    dQ_dt = variables[1]\n",
@@ -921,7 +921,7 @@
         "    # Ecuaciones\n",
         "    d2Q_dt2 = V/L - (1/(C*L))*Q - (R/L)*dQ_dt\n",
         "    \n",
-        "    return [dQ_dt, d2x_dt2]"
+        "    return [dQ_dt, d2Q_dt2]"
       ]
     },
     {
@@ -933,11 +933,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 336,
       "metadata": {},
       "outputs": [],
       "source": [
-        "condiciones_iniciales = [0,10,2,0]\n",
+        "condiciones_iniciales = [0,10]\n",
         "tiempo = np.linspace(0,20,100)"
       ]
     },
@@ -950,24 +950,131 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 338,
       "metadata": {},
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'V' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_24876\\1002692197.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m                        \u001b[0my0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcondiciones_iniciales\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                        \u001b[0mt\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtiempo\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m                        args=(V,L,C,Q,R))\n\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m: name 'V' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "array([[ 0.00000000e+00,  1.00000000e+01],\n",
+              "       [ 1.83584183e+00,  8.17452707e+00],\n",
+              "       [ 3.30508587e+00,  6.38191754e+00],\n",
+              "       [ 4.42068078e+00,  4.68217898e+00],\n",
+              "       [ 5.20623099e+00,  3.12092192e+00],\n",
+              "       [ 5.69317823e+00,  1.73031384e+00],\n",
+              "       [ 5.91820993e+00,  5.30353245e-01],\n",
+              "       [ 5.92094851e+00, -4.69640707e-01],\n",
+              "       [ 5.74195534e+00, -1.26941806e+00],\n",
+              "       [ 5.42106512e+00, -1.87614822e+00],\n",
+              "       [ 4.99605175e+00, -2.30279874e+00],\n",
+              "       [ 4.50161419e+00, -2.56659720e+00],\n",
+              "       [ 3.96866098e+00, -2.68761748e+00],\n",
+              "       [ 3.42386529e+00, -2.68751981e+00],\n",
+              "       [ 2.88945734e+00, -2.58846288e+00],\n",
+              "       [ 2.38321840e+00, -2.41219657e+00],\n",
+              "       [ 1.91863972e+00, -2.17933577e+00],\n",
+              "       [ 1.50521045e+00, -1.90880872e+00],\n",
+              "       [ 1.14880021e+00, -1.61746848e+00],\n",
+              "       [ 8.52105022e-01, -1.31985183e+00],\n",
+              "       [ 6.15128525e-01, -1.02806762e+00],\n",
+              "       [ 4.35674353e-01, -7.51794930e-01],\n",
+              "       [ 3.09829450e-01, -4.98371047e-01],\n",
+              "       [ 2.32422193e-01, -2.72949640e-01],\n",
+              "       [ 1.97443078e-01, -7.87103659e-02],\n",
+              "       [ 1.98419310e-01,  8.28971316e-02],\n",
+              "       [ 2.28737926e-01,  2.11890159e-01],\n",
+              "       [ 2.81914982e-01,  3.09483996e-01],\n",
+              "       [ 3.51810747e-01,  3.77828009e-01],\n",
+              "       [ 4.32792862e-01,  4.19755615e-01],\n",
+              "       [ 5.19850950e-01,  4.38554816e-01],\n",
+              "       [ 6.08667370e-01,  4.37763952e-01],\n",
+              "       [ 6.95649517e-01,  4.20995596e-01],\n",
+              "       [ 7.77929504e-01,  3.91789927e-01],\n",
+              "       [ 8.53337213e-01,  3.53497597e-01],\n",
+              "       [ 9.20352585e-01,  3.09190999e-01],\n",
+              "       [ 9.78042688e-01,  2.61602017e-01],\n",
+              "       [ 1.02598868e+00,  2.13083695e-01],\n",
+              "       [ 1.06420719e+00,  1.65592883e-01],\n",
+              "       [ 1.09307007e+00,  1.20690639e-01],\n",
+              "       [ 1.11322568e+00,  7.95571376e-02],\n",
+              "       [ 1.12552446e+00,  4.30178760e-02],\n",
+              "       [ 1.13095067e+00,  1.15781529e-02],\n",
+              "       [ 1.13056160e+00, -1.45369724e-02],\n",
+              "       [ 1.12543532e+00, -3.53397040e-02],\n",
+              "       [ 1.11662716e+00, -5.10356615e-02],\n",
+              "       [ 1.10513501e+00, -6.19809265e-02],\n",
+              "       [ 1.09187306e+00, -6.86414061e-02],\n",
+              "       [ 1.07765347e+00, -7.15555850e-02],\n",
+              "       [ 1.06317509e+00, -7.13014179e-02],\n",
+              "       [ 1.04901848e+00, -6.84678241e-02],\n",
+              "       [ 1.03564615e+00, -6.36309931e-02],\n",
+              "       [ 1.02340711e+00, -5.73354932e-02],\n",
+              "       [ 1.01254481e+00, -5.00799990e-02],\n",
+              "       [ 1.00320745e+00, -4.23073217e-02],\n",
+              "       [ 9.95459972e-01, -3.43983218e-02],\n",
+              "       [ 9.89296876e-01, -2.66692119e-02],\n",
+              "       [ 9.84655323e-01, -1.93717372e-02],\n",
+              "       [ 9.81427931e-01, -1.26956972e-02],\n",
+              "       [ 9.79474879e-01, -6.77328570e-03],\n",
+              "       [ 9.78634995e-01, -1.68476662e-03],\n",
+              "       [ 9.78735582e-01,  2.53499895e-03],\n",
+              "       [ 9.79600904e-01,  5.88951852e-03],\n",
+              "       [ 9.81059206e-01,  8.41352361e-03],\n",
+              "       [ 9.82948312e-01,  1.01659763e-02],\n",
+              "       [ 9.85119847e-01,  1.12234712e-02],\n",
+              "       [ 9.87442174e-01,  1.16741843e-02],\n",
+              "       [ 9.89802182e-01,  1.16125103e-02],\n",
+              "       [ 9.92106063e-01,  1.11344474e-02],\n",
+              "       [ 9.94279236e-01,  1.03337684e-02],\n",
+              "       [ 9.96265575e-01,  9.29897458e-03],\n",
+              "       [ 9.98026102e-01,  8.11100033e-03],\n",
+              "       [ 9.99537287e-01,  6.84161702e-03],\n",
+              "       [ 1.00078908e+00,  5.55246535e-03],\n",
+              "       [ 1.00178284e+00,  4.29463897e-03],\n",
+              "       [ 1.00252916e+00,  3.10873134e-03],\n",
+              "       [ 1.00304581e+00,  2.02526209e-03],\n",
+              "       [ 1.00335579e+00,  1.06539550e-03],\n",
+              "       [ 1.00348547e+00,  2.41872383e-04],\n",
+              "       [ 1.00346307e+00, -4.39918473e-04],\n",
+              "       [ 1.00331723e+00, -9.80793646e-04],\n",
+              "       [ 1.00307590e+00, -1.38661028e-03],\n",
+              "       [ 1.00276543e+00, -1.66712788e-03],\n",
+              "       [ 1.00240991e+00, -1.83493604e-03],\n",
+              "       [ 1.00203067e+00, -1.90447195e-03],\n",
+              "       [ 1.00164601e+00, -1.89115036e-03],\n",
+              "       [ 1.00127109e+00, -1.81061775e-03],\n",
+              "       [ 1.00091795e+00, -1.67813433e-03],\n",
+              "       [ 1.00059559e+00, -1.50808194e-03],\n",
+              "       [ 1.00031026e+00, -1.31359566e-03],\n",
+              "       [ 1.00006570e+00, -1.10630390e-03],\n",
+              "       [ 9.99863454e-01, -8.96186328e-04],\n",
+              "       [ 9.99703233e-01, -6.91498495e-04],\n",
+              "       [ 9.99583249e-01, -4.98786335e-04],\n",
+              "       [ 9.99500562e-01, -3.22956297e-04],\n",
+              "       [ 9.99451394e-01, -1.67394963e-04],\n",
+              "       [ 9.99431423e-01, -3.41246333e-05],\n",
+              "       [ 9.99436046e-01,  7.60255303e-05],\n",
+              "       [ 9.99460592e-01,  1.63226545e-04],\n",
+              "       [ 9.99500512e-01,  2.28465826e-04]])"
+            ]
+          },
+          "execution_count": 338,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "def func(condiciones_iniciales,R,L,C):\n",
-        "    "
+        "R = 1\n",
+        "L = 1\n",
+        "C = 1\n",
+        "V = 1\n",
+        "\n",
+        "sol = scipy.integrate.odeint(func=ode, \n",
+        "                       y0=condiciones_iniciales, \n",
+        "                       t=tiempo,\n",
+        "                       args=(R,L,C,V))\n",
+        "\n",
+        "sol"
       ]
     }
   ],
